--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\User\\Desktop\\Godot_v4.5-stable_win64.exe\\Godot_v4.5-stable_win64.exe"
+    "godotTools.editorPath.godot4": "/home/erdospeet/Desktop/Godot_v4.5-stable_linux.x86_64"
 }
